<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    tools:context="cmsc436.msproject.util.AlertFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:gravity="center"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:text="@string/sampleText"/>

        <View
            android:id="@+id/alertLineSeparator"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/alertTitle"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/alertMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alertLineSeparator"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:text="@string/sampleText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/alertMessage"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/alertBeginBtn"
                android:layout_width="@dimen/fragmentBtnWidth"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alertBtnTextSize"
                android:text="@string/beginLabel"/>

            <Button
                android:id="@+id/alertCancelBtn"
                android:layout_width="@dimen/fragmentBtnWidth"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alertBtnTextSize"
                android:text="@string/cancelLabel"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
